#33 uploading assets using a for-each

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@ Hello <!DOCTYPE html>
     <title>Hello Terraformers</title>
 </head>
 <body>
-    <h1>Hello there Terraformers!</h1>
+    <h1>Hello there Terraformers!!!</h1>
+    <img src="/assets/the-witcher-3.jpg"/>
+    <img src="/assets/the-witcher-3-dlc.jpg"/>
 </body>
 </html>
