#46 fix issues with provider, setup two different towns.

--- a/public/assassins-creed/index.html
+++ b/public/assassins-creed/index.html
@@ -3,11 +3,11 @@ Hello <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello Terraformers</title>
+    <title>Assassins Creed</title>
 </head>
 <body>
-    <h1>Hello there Terraformers!!!</h1>
-    <img src="/assets/the-witcher-3.jpg"/>
-    <img src="/assets/the-witcher-3-dlc.jpg"/>
+    <h1>Assassins Creed</h1>
+    <img src="/assets/AssasinsCreed.jpg"/>
+    <img src="/assets/AssasinsCreed-characters.jpg"/>
 </body>
 </html>
