#48 created new home and add homes to correct town categories

--- a/public/assassins-creed/index.html
+++ b/public/assassins-creed/index.html
@@ -1,13 +1,49 @@
-Hello <!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assassins Creed</title>
+    <title>Assassin's Creed</title>
+    <style>
+        body {
+            background-color: #000;
+            color: #ffffff;
+            font-family: Arial, sans-serif;
+        }
+        header {
+            width: 800px;
+            margin: 0 auto;
+            text-align: center;
+        }
+        header img {
+            max-width: 100%;
+        }
+        h1 {
+            color: #931919;
+        }
+        p {
+            width: 500px;
+            margin: 0 auto;
+        }
+        footer {
+            width: 800px;
+            margin: 30px auto;
+            text-align: center;
+        }
+        footer img {
+            max-width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <h1>Assassins Creed</h1>
-    <img src="/assets/AssasinsCreed.jpg"/>
-    <img src="/assets/AssasinsCreed-characters.jpg"/>
+    <header>
+        <img src="/assets/assassinscreed-banner1.jpg" alt="Assassins Creed Top Banner">
+        <h1>SYSNOPSIS</h1>
+        <p>The Assassin's Creed series is a science fiction action-adventure video game series developed by Ubisoft and published by Ubisoft Entertainment. The games are set in an open world and feature a blend of action, stealth, and exploration. The player controls a protagonist, who is usually a member of the Assassin Brotherhood, a secret organization that fights for peace and free will. The games are set in various historical time periods, and the player can interact with historical figures and events. <br><br>The main storyline of the Assassin's Creed series is set in the present day, and follows a character named Desmond Miles. Desmond is abducted by a company called Abstergo Industries, which is secretly controlled by the Knights Templar, a centuries-old order of warriors who are the enemies of the Assassin Brotherhood. Abstergo forces Desmond to use a device called the Animus to relive the memories of his ancestors, who were all Assassins. Abstergo is searching for Pieces of Eden, powerful artifacts that the Templars believe can be used to control the world. <br><br>The Assassin's Creed series is a complex and nuanced story that explores themes of free will, control, and the power of knowledge. The games also feature a diverse cast of characters from different time periods and cultures.</p>
+    </header>
+
+    <footer>
+        <br><br><br>
+        <img src="/assets/assassinscreed-banner2.jpg" alt="Assassins Creed Footer Banner">
+    </footer>
 </body>
 </html>
